--- a/style.css
+++ b/style.css
@@ -4,8 +4,8 @@ body {
 }
 .principal{
   margin: 5% auto;
-  width: 1259px;
-  height: 804px;
+  width: 70%;
+  height: 90%;
   background:  #CAEBF2 ;
   border-radius: 50px;
   box-shadow: -5px 3px 39px -3px rgba(79,77,77,0.74);
@@ -13,7 +13,7 @@ body {
 -moz-box-shadow: -5px 3px 39px -3px rgba(79,77,77,0.74);
 }
 
-#logoprincipal {
+.principal h1 {
   filter: brightness(0) saturate(100%) invert(37%) sepia(31%) saturate(6435%) hue-rotate(338deg) brightness(111%) contrast(108%);
   width: 120px;
   height: 48px;
@@ -21,15 +21,16 @@ body {
 }
 
 .datos-encriptar textarea {
-  
+  width: 40%;
+  height: 50%;
+  margin-left: 5rem;
+  margin-top: 3rem;
   font-family: "Montserrat", sans-serif;
   font-family: "Open Sans", sans-serif;
   font-size: 32px;
   border: none;
   background: #f3f5fc;
   resize: none;
-  margin-left: 6rem;
-  margin-top: 4rem;
   border-radius: 1.5rem;
   box-shadow: 10px 10px 5px 0px rgba(79,77,77,0.75);
 -webkit-box-shadow: 10px 10px 5px 0px rgba(79,77,77,0.75);
@@ -42,7 +43,7 @@ body {
   font-family: "Open Sans", sans-serif;
   text-align: center;
 }
-#botones p {
+.botones p {
   color: #495057;
   opacity: 0.8;
   margin-left: 10%;
@@ -54,7 +55,7 @@ body {
   line-height: 150%;
 }
 
-#encriptar {
+.botones button:nth-child(2){
   background: #FF3F3F;
   border-radius: 24px;
   width: 300px;
@@ -67,7 +68,7 @@ body {
   margin-top: 3%;
   
 }
-#desencriptar {
+.botones button:nth-child(3) {
   background: #A9A9A9;
   border-radius: 24px;
   width: 300px;
@@ -76,12 +77,24 @@ body {
   color: white;
   font-size: large;
   cursor: pointer;
+  
+}
+.botones button:nth-child(2):hover{
+ 
+  transform: scale(1.2);
+  margin-right: 2rem;
+  transition: 1s all;
+}
+.botones button:nth-child(3):hover {
+  transform: scale(1.2);
+  margin-left: 2rem;
+  transition: 1s all;
 }
 
 .informacion {
  
   float: right;
-  margin-top: -46%;
+  margin-top: -45%;
   margin-right: 4rem;
   width: 400px;
   border-radius: 2rem;
@@ -163,16 +176,69 @@ body {
   margin-left: 3rem;
   margin-bottom: 1rem;
 }
+#btncopiar2:hover{
+  transform: scale(1.2);
+  
+  transition: 1s all;
+}
 #btncopiar3{
   display: none;
 }
-footer {
+.derechos {
   font-size: smaller;
   margin-top: -3%;
   margin-left: 3rem;
 }
 @media screen and (max-width:480px){
-  
+  .principal{
+    position: relative;
+    width: 100%;
+    height: auto;
+    margin-left: auto;
+  }
+  .principal p {
+    margin-left: 25%;
+  }
+  .datos-encriptar{
+    
+    width:100%;
+  }
+  .datos-encriptar textarea{
+    width: 80%;
+    height: 30%;
+    margin-left: 10%;
+    box-shadow: -5px 3px 39px -3px rgba(79,77,77,0.74);
+    -webkit-box-shadow: -5px 3px 39px -3px rgba(79,77,77,0.74);
+    -moz-box-shadow: -5px 3px 39px -3px rgba(79,77,77,0.74);
+  }
+ 
+  .botones button:nth-child(3){
+    margin-top: 1rem;
+    margin-left: 1.8rem;
+    margin-bottom: 1rem;
+  }
+  .informacion{
+   position:absolute;
+    margin-top: 3rem;
+    width: 100%;
+    box-shadow: -5px 3px 39px -3px rgba(79,77,77,0.74);
+    -webkit-box-shadow: -5px 3px 39px -3px rgba(79,77,77,0.74);
+    -moz-box-shadow: -5px 3px 39px -3px rgba(79,77,77,0.74);
+
+  }
+  .informacion p{
+    text-align: center;
+    margin-left: 1px;
+  }
+  .informacion textarea{
+    width: 90%;
+    margin-left: 5%;
+  }
+  .derechos {
+    margin-top: 2%;
+   margin-left: 25%;
+  }
+
 }
 
 
